chore: add extra labels to default prometheus alerts

--- a/charts/motive-service/values.yaml
+++ b/charts/motive-service/values.yaml
@@ -493,8 +493,10 @@ metrics:
     # -- Configure default alerting rules
     defaultAlerts:
       extraLabels: {}
-      #  team: 'motive'
-      #  slackChannel: 'motive-alerts-dev'
+      team: ""
+      slackChannelInfo: ""
+      slackChannelWarning: ""
+      slackChannelCritical: ""
       kafka:
         enabled: false
         deadLetter:
