--- a/charts/motive-service/templates/prometheus-rule-alerting.yaml
+++ b/charts/motive-service/templates/prometheus-rule-alerting.yaml
@@ -28,6 +28,12 @@ spec:
           for: 10m
           labels:
             severity: warning
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.team }}
+            team: {{ . | quote }}
+            {{- end }}
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.slackChannelWarning }}
+            slack_channel: {{ . | quote }}
+            {{- end }}
             {{- with $.Values.metrics.prometheusRule.defaultAlerts.extraLabels }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
@@ -41,10 +47,16 @@ spec:
           for: 0m
           labels:
             severity: critical
+            oncall: 'true'
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.team }}
+            team: {{ . | quote }}
+            {{- end }}
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.slackChannelCritical }}
+            slack_channel: {{ . | quote }}
+            {{- end }}
             {{- with $.Values.metrics.prometheusRule.defaultAlerts.extraLabels }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-            oncall: 'true'
           annotations:
             summary: 'Number of Pods == 0'
             description: 'Service reports no pods running'
@@ -61,10 +73,16 @@ spec:
           for: 0m
           labels:
             severity: critical
+            skip_resolved: 'true'
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.team }}
+            team: {{ . | quote }}
+            {{- end }}
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.slackChannelCritical }}
+            slack_channel: {{ . | quote }}
+            {{- end }}
             {{- with $.Values.metrics.prometheusRule.defaultAlerts.extraLabels }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-            skip_resolved: 'true'
           annotations:
             summary: 'Topic "{{ . }}" has new incoming messages'
             description: 'Service reports there are new messages which could not be processed correctly'
@@ -78,6 +96,12 @@ spec:
           for: {{ .for | default "10s" }}
           labels:
             severity: critical
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.team }}
+            team: {{ . | quote }}
+            {{- end }}
+            {{- with $.Values.metrics.prometheusRule.defaultAlerts.slackChannelCritical }}
+            slack_channel: {{ . | quote }}
+            {{- end }}
             {{- with $.Values.metrics.prometheusRule.defaultAlerts.extraLabels }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
