--- a/charts/motive-service/templates/prometheus-rule-recording.yaml
+++ b/charts/motive-service/templates/prometheus-rule-recording.yaml
@@ -1,4 +1,5 @@
 {{- if and .Values.metrics.enabled .Values.metrics.prometheusRule.enabled (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1") -}}
+{{- if or (.Values.metrics.prometheusRule.defaultAlerts.kafka.enabled) (.Values.metrics.prometheusRule.extraRecordingRules) -}}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -37,4 +38,5 @@ spec:
       rules:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+{{- end }}
 {{- end }}
