--- a/charts/motive-service/values.yaml
+++ b/charts/motive-service/values.yaml
@@ -498,6 +498,7 @@ metrics:
     defaultAlerts:
       extraLabels: {}
       team: ""
+      slackChannel: ""
       slackChannelInfo: ""
       slackChannelWarning: ""
       slackChannelCritical: ""
