chore: handle conflict when service and monitor ports are the same

--- a/charts/motive-service/templates/deployment.yaml
+++ b/charts/motive-service/templates/deployment.yaml
@@ -94,7 +94,7 @@ spec:
             - name: service
               containerPort: {{ .servicePort }}
               protocol: {{ .serviceProtocol }}
-            {{- if $.Values.metrics.enabled }}
+            {{- if and ($.Values.metrics.enabled) (not (eq .servicePort .metricsPort)) }}
             - name: metrics
               containerPort: {{ .metricsPort }}
               protocol: {{ .metricsProtocol }}
