chore: improve kafka lag alerts

--- a/charts/motive-service/templates/prometheus-rule-alerting.yaml
+++ b/charts/motive-service/templates/prometheus-rule-alerting.yaml
@@ -92,7 +92,7 @@ spec:
         {{- if .Values.metrics.prometheusRule.defaultAlerts.kafka.lag.enabled }}
         {{- range .Values.metrics.prometheusRule.defaultAlerts.kafka.lag.topics }}
         - alert: TopicLag-{{ include "motive-service.fullname" $ }}
-          expr: sum(kafka_consumergroup_lag{namespace="kafka-events", consumergroup="{{ $.Values.metrics.prometheusRule.defaultAlerts.kafka.lag.consumerGroup | required "consumerGroup is required." }}", topic="{{ .topic | required "topic is required" }}"}) > {{ .threshold | required "threshold is required" }}
+          expr: sum(kafka_consumergroup_lag{namespace="{{ $.Values.metrics.prometheusRule.defaultAlerts.kafka.lag.namespace | required "namespace is required" }}", consumergroup="{{ .consumerGroup | default $.Values.metrics.prometheusRule.defaultAlerts.kafka.lag.consumerGroup | required "consumerGroup is required." }}", topic="{{ .topic | required "topic is required" }}"}) > {{ .threshold | required "threshold is required" }}
           for: {{ .for | default "10s" }}
           labels:
             severity: critical
