--- a/charts/motive-service/templates/deployment.yaml
+++ b/charts/motive-service/templates/deployment.yaml
@@ -89,6 +89,10 @@ spec:
               {{- toYaml . | nindent 12 }}
             {{- end }}
           {{- end }}
+          {{- with .Values.service.envFrom }}
+          envFrom:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.service.ports }}
           ports:
             - name: service
