--- a/charts/motive-service/values.yaml
+++ b/charts/motive-service/values.yaml
@@ -212,19 +212,25 @@ service:
   # -- Enable startupProbe
   startupProbe: {}
 
-  env: {}
+  env: []
     # - name: NAME
     #   valueFrom:
     #     secretKeyRef:
     #       name: KEY_NAME
     #       key: SECRET_KEY
 
-  extraEnv: {}
+  extraEnv: []
     # - name: NAME
     #   valueFrom:
     #     secretKeyRef:
     #       name: KEY_NAME
     #       key: SECRET_KEY
+
+  envFrom: []
+    # - secretRef:
+    #     name: secret-name
+    # - configMapRef:
+    #     name: config-map-name
 
   type: ClusterIP
 
